# fedrepos

./: .gitignore  Makefile.am  README.md  configure.ac  fedrepos.1.txt  fedrepos.py  fedrepos.spec
