#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([fedrepos], [0.2], [mbooth@redhat.com])
AM_INIT_AUTOMAKE([foreign])

# Checks for programs.
AM_MISSING_PROG(A2X, a2x)

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
